feat: Implement QRIS management, dynamic QRIS generation
